Use selectable IO